@@ -1,3 +1,3 @@
 #!/usr/bin/env python
 
-from proof.analysis import Analysis
+from proof.analysis import Analysis, never_cache
